feat: implement secure API key auth and backfill embeddings
- Add API key authentication for admin endpoints
  - Introduce API_KEY and API_KEY_NAME settings
  - Update config validation to require API keys
  - Document API key setup in .env.example

- Set up document embeddings infrastructure
  - Add backfill script for computing missing embeddings
  - Configure Celery worker for async embedding tasks
  - Set up pgvector for vector similarity search
  - Add environment variables for embeddings configuration

- Update dependencies and configuration
  - Add pydantic-settings>=2.0.3
  - Document all required environment variables
  - Configure Redis for Celery broker/backend
  - Set up proper worker concurrency and batch sizes

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,8 @@ EMBEDDING_DIM=1536
 # GDPR / Security
 # HMAC key for hashing user IDs in audit logs (keep secret & rotate occasionally)
 HMAC_KEY=replace_with_a_secure_random_key
-API_KEY=replace_with_admin_api_key  # optional: used to protect admin endpoints
+API_KEY=replace_with_admin_api_key  # Required for admin endpoints
+API_KEY_NAME=X-API-Key             # Header name for API key authentication
 
 # Rate limiting & CORS
 RATE_LIMIT=60              # requests per minute per IP (default)
