--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ aioredis>=2.0.1
 openai>=1.0.0
 python-jose>=3.3.0
 passlib>=1.7.4
-python-multipart>=0.0.6
+python-multipart>=0.0.7
+pydantic-settings>=2.0.3
