--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,9 @@ python-jose>=3.3.0
 passlib>=1.7.4
 python-multipart>=0.0.7
 pydantic-settings>=2.0.3
+
+# Test dependencies
+pytest>=8.0.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+requests>=2.31.0
