--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,41 @@
+# Web Framework
 fastapi>=0.103.0
 uvicorn>=0.23.0
+
+# Database
 sqlalchemy>=2.0.0
 asyncpg>=0.28.0
 psycopg2-binary>=2.9.9
 pgvector>=0.2.1
+
+# Task Queue
 celery>=5.3.4
 redis>=5.0.0
-httpx>=0.25.0
-python-dotenv>=1.0.0
-prometheus-client>=0.17.1
-pydantic>=2.4.2
 aioredis>=2.0.1
-openai>=1.0.0
+
+# HTTP Client
+httpx>=0.25.0
+
+# Environment and Config
+python-dotenv>=1.0.0
+pydantic>=2.4.2
+pydantic-settings>=2.0.3
+
+# Authentication & Security
 python-jose>=3.3.0
 passlib>=1.7.4
 python-multipart>=0.0.7
-pydantic-settings>=2.0.3
+
+# Monitoring & Metrics
+prometheus-client>=0.17.1
+
+# AI/ML
+openai>=1.0.0
 
 # Test dependencies
 pytest>=8.0.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+pytest-env>=1.1.1
 requests>=2.31.0
+httpx>=0.25.0
